--- a/translations/ru/jse_jumpbot.phrases.txt
+++ b/translations/ru/jse_jumpbot.phrases.txt
@@ -27,17 +27,17 @@
 	
 	"Cannot Call Air"
 	{
-		"ru"			"Нельзя призвать бота в воздухе"
+		"ru"			"Невозможно призвать бота в воздухе"
 	}
 	
 	"Cannot Create Bot"
 	{
-		"ru"			"Невозможно призвать бота"
+		"ru"			"Невозможно создать бота"
 	}
 	
 	"Cannot Delete Repo"
 	{
-		"ru"			"Невозможно удалить запись хранилища"
+		"ru"			"Невозможно удалить запись с хранилища"
 	}
 	
 	"Cannot Download Rec"
@@ -47,22 +47,22 @@
 	
 	"Cannot File Read"
 	{
-		"ru"			"Нельзя прочитать файл"
+		"ru"			"Невозможно прочитать файл"
 	}
 	
 	"Cannot File Write"
 	{
-		"ru"			"Нельзя изменить файл"
+		"ru"			"Невозможно изменить файл"
 	}
 	
 	"Cannot Load Incomplete"
 	{
-		"ru"			"Нельзя загрузить недописанный файл"
+		"ru"			"Невозможно загрузить недописанный файл"
 	}
 	
 	"Cannot Local Play"
 	{
-		"ru"			"Невозможно запустить локальный файл для воспроизведения"
+		"ru"			"Невозможно проиграть локальный файл"
 	}
 	
 	"Cannot Open Rec"
@@ -72,7 +72,7 @@
 	
 	"Checkpoint Error Threshold"
 	{
-		"ru"			"Ошибка, текущая точка воспроизведения выше порогового значения"
+		"ru"			"Порог ошибки контрольных точек превышен"
 	}
 	
 	"Class"
@@ -83,7 +83,7 @@
 	"Class Recording"
 	{
 		"#format"	"{1:s}"
-		"ru"			"{1} Записывается"
+		"ru"			"{1} запись"
 	}
 	
 	"Delete"
@@ -156,7 +156,7 @@
 	
 	"Frames"
 	{
-		"ru"			"Карды"
+		"ru"			"Кадров"
 	}
 	
 	"Hash"
@@ -171,7 +171,7 @@
 	
 	"Illegal Char"
 	{
-		"ru"			"В имени диретории использованы недопустимые символы"
+		"ru"			"В имени директории использованы недопустимые символы"
 	}
 	
 	"Invalid CC"
@@ -207,7 +207,7 @@
 	
 	"Local"
 	{
-		"ru"			"Локальный"
+		"ru"			"Локал."
 	}
 	
 	"Map Name"
@@ -285,12 +285,12 @@
 	
 	"Playback Start"
 	{
-		"ru"			"Старт воспроизведения"
+		"ru"			"Проиграть"
 	}
 	
 	"Playback Stop"
 	{
-		"ru"			"Остановка воспроизведения"
+		"ru"			"Остановить проигрыш"
 	}
 	
 	"Players Ahead"
@@ -301,7 +301,7 @@
 	
 	"Playing Closest"
 	{
-		"ru"			"Воспроизведение ближайшего рекорда"
+		"ru"			"Воспроизведение ближайшей записи"
 	}
 	
 	"Press Review"
@@ -362,7 +362,7 @@
 	"Recorder Access Revoked"
 	{
 		"#format"	"{1:s}"
-		"ru"			"Прекращен доступ к записыванию для {1}"
+		"ru"			"Отозван доступ к записям для {1}"
 	}
 	
 	"Recorder Active"
