--- a/translations/ru/jse_jumpbot.phrases.txt
+++ b/translations/ru/jse_jumpbot.phrases.txt
@@ -83,7 +83,7 @@
 	"Class Recording"
 	{
 		"#format"	"{1:s}"
-		"ru"			"{1} запись"
+		"ru"			"{1}-ая запись"
 	}
 	
 	"Delete"
@@ -232,7 +232,7 @@
 	
 	"No CC"
 	{
-		"ru"			"Нет контролируемых клиентов"
+		"ru"			"Нет контрольных клиентов"
 	}
 	
 	"No Local Rec"
@@ -259,17 +259,17 @@
 	
 	"No Rec Access"
 	{
-		"ru"			"Нет доступа для записи"
+		"ru"			"Отсутствуют права для записи"
 	}
 	
 	"No Rec Class"
 	{
-		"ru"			"Не найдено записей для этого класса"
+		"ru"			"Записей для этого класса не найдено"
 	}
 	
 	"No Rec Map"
 	{
-		"ru"			"На найдено записей для этой карты"
+		"ru"			"Записей для этой карты не найдено"
 	}
 	
 	"Playback Queue"
@@ -367,13 +367,13 @@
 	
 	"Recorder Active"
 	{
-		"ru"			"Запись активна"
+		"ru"			"Запись запущена"
 	}
 	
 	"Recorder Using"
 	{
 		"#format"	"{1:s}"
-		"ru"			"В данный момент игрок {1} уже использует запись"
+		"ru"			"Игрок {1} записывает прохождение, подождите..."
 	}
 	
 	"Recording"
@@ -440,7 +440,7 @@
 	"Socket Error"
 	{
 		"#format"	"{1:d},{2:d}"
-		"ru"			"Ошибка сокета {1} (код {2})"
+		"ru"			"Ошибка сокета {1} (Код: {2})"
 	}
 	
 	"Soldier"
@@ -507,7 +507,7 @@
 	
 	"Usage Delete"
 	{
-		"ru"			"Использование: jb_delete <id>, где <id> находится рядом с jb_nearby"
+		"ru"			"Использование: jb_delete <id>, <id> можно узнать через jb_nearby"
 	}
 	
 }
